server/compilers/goLiteJS/src/test/ml1/valid/print1.go
// print and println support
package main

func main() {
    print()
    print(23)
    print(2+3, 23)
    println()
    println(23)
    println(2+3, 23)
}
