server/compilers/goLiteJS/src/test/ml1/invalid/slice8.go
// append with right parenthesis missing
package main

var x []int

func main() {
    x = append(x, 3
}
